# OneSound

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
Example/: Example1_SimpleSound.cpp  Example6_DynamicMixing.cpp  Example7_Export.cpp
Include/OneSound/: Listener.h  OneExport.h  OneSound.h  Utility.h  XAudio2Device.h
Include/OneSound/SoundType/: Sound2D.h  Sound3D.h  SoundObject.h
Managed/: Managed.csproj  Managed.sln  OneSound.cs  Program.cs
Managed/Properties/: AssemblyInfo.cs
Managed/XAudio/: XAudio.sln
Managed/XAudio/MigrationBackup/3c76afed/XAudio/: NuGetUpgradeLog.html  XAudio.csproj  packages.config
Managed/XAudio/MigrationBackup/4f96f99f/CSCli/: CSCli.csproj  NuGetUpgradeLog.html
Managed/XAudio/XAudio/: Class1.cs  NativeMethods.cs  NativeObject.cs  OneAudio.cs  OneSound.cs  Sound2D.cs  Sound3D.cs  SoundBuffer.cs  SoundListener.cs  SoundObject.cs  SoundStream.cs  Speaker.cs  XAudio.csproj
Managed/XAudio/XAudio/Properties/: AssemblyInfo.cs
Managed/XAudio/XAudio/Utils/: ILUtils.cs
Managed/XAudio/XAudio/X3DAudio/: CalculateFlags.cs  Cone.cs  CurveNative.cs  CurvePoint.cs  DspSettings.cs  Emitter.cs  Listener.cs  Vector3.cs
Source/: Listener.cpp  OneExport.cpp  OneSound.cpp  XAudio2Device.cpp
Source/SoundType/: Sound2D.cpp  Sound3D.cpp  SoundBuffer.cpp  SoundObject.cpp
Source/StreamType/: MP3Stream.cpp
